--- a/src/main/resources/assets/lom-skin-flipper/lang/en_us.json
+++ b/src/main/resources/assets/lom-skin-flipper/lang/en_us.json
@@ -1,9 +1,9 @@
 {
-  "text.autoconfig.lom-skin-flipper.title": "LoM2 Skin Flipper Configuration",
-  "text.autoconfig.lom-skin-flipper.option.skinFlipperData.isSkinFlipped": "Is your skin currently \"flipped\"",
-  "text.autoconfig.lom-skin-flipper.option.skinFlipperData.isSkinFlipped.@Tooltip": "Determines whether you are in the dynamic skin or \"flipped\" to the constant skin.",
-  "text.autoconfig.lom-skin-flipper.option.skinFlipperData.changingSkin": "Dynamic Skin",
-  "text.autoconfig.lom-skin-flipper.option.skinFlipperData.changingSkin.@Tooltip": "The skin url for the skin that is expected to change.",
-  "text.autoconfig.lom-skin-flipper.option.skinFlipperData.constantSkin": "Constant Skin",
-  "text.autoconfig.lom-skin-flipper.option.skinFlipperData.constantSkin.@Tooltip": "The skin url for the skin that should stay the same."
+  "text.autoconfig.lom-enhanced.title": "LoM2 Skin Flipper Configuration",
+  "text.autoconfig.lom-enhanced.option.skinFlipperData.isSkinFlipped": "Is your skin currently \"flipped\"",
+  "text.autoconfig.lom-enhanced.option.skinFlipperData.isSkinFlipped.@Tooltip": "Determines whether you are in the dynamic skin or \"flipped\" to the constant skin.",
+  "text.autoconfig.lom-enhanced.option.skinFlipperData.changingSkin": "Dynamic Skin",
+  "text.autoconfig.lom-enhanced.option.skinFlipperData.changingSkin.@Tooltip": "The skin url for the skin that is expected to change.",
+  "text.autoconfig.lom-enhanced.option.skinFlipperData.constantSkin": "Constant Skin",
+  "text.autoconfig.lom-enhanced.option.skinFlipperData.constantSkin.@Tooltip": "The skin url for the skin that should stay the same."
 }
