Adding support for bingo config.

--- a/src/main/resources/assets/duelutils/lang/en_us.json
+++ b/src/main/resources/assets/duelutils/lang/en_us.json
@@ -2,6 +2,7 @@
   "text.autoconfig.duelutils.title": "LoM2 Enhanced Configuration",
   "text.autoconfig.duelutils.category.skinFlipperConfig": "Skin Flipper",
   "text.autoconfig.duelutils.category.levelUpMessageConfig": "LevelUp Message",
+  "text.autoconfig.duelutils.category.bingoConfig": "Bingo",
   "text.autoconfig.duelutils.option.skinFlipperConfig.isSkinFlipped": "Is your skin currently \"flipped\"",
   "text.autoconfig.duelutils.option.skinFlipperConfig.isSkinFlipped.@Tooltip": "Determines whether you are in the dynamic skin or \"flipped\" to the constant skin.",
   "text.autoconfig.duelutils.option.skinFlipperConfig.changingSkin": "Dynamic Skin",
@@ -10,6 +11,8 @@
   "text.autoconfig.duelutils.option.skinFlipperConfig.constantSkin.@Tooltip": "The skin url for the skin that should stay the same.",
   "text.autoconfig.duelutils.option.levelUpMessageConfig.areMessagesEnabled": "Level Up Messages Enabled",
   "text.autoconfig.duelutils.option.levelUpMessageConfig.areMessagesEnabled.@Tooltip": "Determines if level up messages are sent in the chat.",
+  "text.autoconfig.duelutils.option.bingoConfig.maxCards": "Max Card Count",
+  "text.autoconfig.duelutils.option.bingoConfig.maxCards.@Tooltip": "The max amount of cards that can be generated.",
   "category.duelco.skinflipper": "DuelUtils SkinFlipper",
   "key.duelco.flipskin": "Flip Skin",
   "category.duelco.screens": "DuelUtils Screens",
