Adding support for ChatUtils config.

--- a/src/main/resources/assets/duelutils/lang/en_us.json
+++ b/src/main/resources/assets/duelutils/lang/en_us.json
@@ -3,6 +3,7 @@
   "text.autoconfig.duelutils.category.skinFlipperConfig": "Skin Flipper",
   "text.autoconfig.duelutils.category.levelUpMessageConfig": "LevelUp Message",
   "text.autoconfig.duelutils.category.bingoConfig": "Bingo",
+  "text.autoconfig.duelutils.category.chatUtilsConfig": "ChatUtils",
   "text.autoconfig.duelutils.option.skinFlipperConfig.isSkinFlipped": "Is your skin currently \"flipped\"",
   "text.autoconfig.duelutils.option.skinFlipperConfig.isSkinFlipped.@Tooltip": "Determines whether you are in the dynamic skin or \"flipped\" to the constant skin.",
   "text.autoconfig.duelutils.option.skinFlipperConfig.changingSkin": "Dynamic Skin",
@@ -13,6 +14,10 @@
   "text.autoconfig.duelutils.option.levelUpMessageConfig.areMessagesEnabled.@Tooltip": "Determines if level up messages are sent in the chat.",
   "text.autoconfig.duelutils.option.bingoConfig.maxCards": "Max Card Count",
   "text.autoconfig.duelutils.option.bingoConfig.maxCards.@Tooltip": "The max amount of cards that can be generated.",
+  "text.autoconfig.duelutils.option.chatUtilsConfig.slashMeContinuesEnabled": "Enable /me Continues",
+  "text.autoconfig.duelutils.option.chatUtilsConfig.slashMeContinuesEnabled.@Tooltip": "Enables splitting a /me into two if it is too long.",
+  "text.autoconfig.duelutils.option.chatUtilsConfig.startupCommandsNamesEnabled": "Enable /names off On Startup",
+  "text.autoconfig.duelutils.option.chatUtilsConfig.startupCommandsNamesEnabled.@Tooltip": "Turns player names off upon joining the server..",
   "category.duelco.skinflipper": "DuelUtils SkinFlipper",
   "key.duelco.flipskin": "Flip Skin",
   "category.duelco.screens": "DuelUtils Screens",
