Updating SkinFlipper to TransformationHelper, since thats a WAY better way of describing it.

--- a/src/main/resources/assets/duelutils/lang/en_us.json
+++ b/src/main/resources/assets/duelutils/lang/en_us.json
@@ -1,15 +1,15 @@
 {
   "text.autoconfig.duelutils.title": "DuelUtils Configuration",
-  "text.autoconfig.duelutils.category.skinFlipperConfig": "Skin Flipper",
+  "text.autoconfig.duelutils.category.transformationHelperConfig": "Transformation Helper",
   "text.autoconfig.duelutils.category.levelUpMessageConfig": "LevelUp Message",
   "text.autoconfig.duelutils.category.bingoConfig": "Bingo",
   "text.autoconfig.duelutils.category.chatUtilsConfig": "ChatUtils",
-  "text.autoconfig.duelutils.option.skinFlipperConfig.isSkinFlipped": "Is your skin currently \"flipped\"",
-  "text.autoconfig.duelutils.option.skinFlipperConfig.isSkinFlipped.@Tooltip": "Determines whether you are in the dynamic skin or \"flipped\" to the constant skin.",
-  "text.autoconfig.duelutils.option.skinFlipperConfig.changingSkin": "Dynamic Skin",
-  "text.autoconfig.duelutils.option.skinFlipperConfig.changingSkin.@Tooltip": "The skin url for the skin that is expected to change.",
-  "text.autoconfig.duelutils.option.skinFlipperConfig.constantSkin": "Constant Skin",
-  "text.autoconfig.duelutils.option.skinFlipperConfig.constantSkin.@Tooltip": "The skin url for the skin that should stay the same.",
+  "text.autoconfig.duelutils.option.transformationHelperConfig.isTransformed": "Is your skin currently transformed",
+  "text.autoconfig.duelutils.option.transformationHelperConfig.isTransformed.@Tooltip": "Determines whether you are transformed or not.",
+  "text.autoconfig.duelutils.option.transformationHelperConfig.regularSkin": "Regular Skin",
+  "text.autoconfig.duelutils.option.transformationHelperConfig.regularSkin.@Tooltip": "The skin url for the pre-transformation skin.",
+  "text.autoconfig.duelutils.option.transformationHelperConfig.transformationSkin": "Transformation Skin",
+  "text.autoconfig.duelutils.option.transformationHelperConfig.transformationSkin.@Tooltip": "The skin url for the transformation.",
   "text.autoconfig.duelutils.option.levelUpMessageConfig.areMessagesEnabled": "Level Up Messages Enabled",
   "text.autoconfig.duelutils.option.levelUpMessageConfig.areMessagesEnabled.@Tooltip": "Determines if level up messages are sent in the chat.",
   "text.autoconfig.duelutils.option.bingoConfig.maxCards": "Max Card Count",
