Switching from using Cloth Config to using MidnightConfig due to more functionality.

--- a/src/main/resources/assets/duelutils/lang/en_us.json
+++ b/src/main/resources/assets/duelutils/lang/en_us.json
@@ -1,23 +1,8 @@
 {
-  "text.autoconfig.duelutils.title": "DuelUtils Configuration",
-  "text.autoconfig.duelutils.category.transformationHelperConfig": "Transformation Helper",
-  "text.autoconfig.duelutils.category.levelUpMessageConfig": "LevelUp Message",
-  "text.autoconfig.duelutils.category.bingoConfig": "Bingo",
-  "text.autoconfig.duelutils.category.chatUtilsConfig": "ChatUtils",
-  "text.autoconfig.duelutils.option.transformationHelperConfig.isTransformed": "Is your skin currently transformed",
-  "text.autoconfig.duelutils.option.transformationHelperConfig.isTransformed.@Tooltip": "Determines whether you are transformed or not.",
-  "text.autoconfig.duelutils.option.transformationHelperConfig.regularSkin": "Regular Skin",
-  "text.autoconfig.duelutils.option.transformationHelperConfig.regularSkin.@Tooltip": "The skin url for the pre-transformation skin.",
-  "text.autoconfig.duelutils.option.transformationHelperConfig.transformationSkin": "Transformation Skin",
-  "text.autoconfig.duelutils.option.transformationHelperConfig.transformationSkin.@Tooltip": "The skin url for the transformation.",
-  "text.autoconfig.duelutils.option.levelUpMessageConfig.areMessagesEnabled": "Level Up Messages Enabled",
-  "text.autoconfig.duelutils.option.levelUpMessageConfig.areMessagesEnabled.@Tooltip": "Determines if level up messages are sent in the chat.",
-  "text.autoconfig.duelutils.option.bingoConfig.maxCards": "Max Card Count",
-  "text.autoconfig.duelutils.option.bingoConfig.maxCards.@Tooltip": "The max amount of cards that can be generated.",
-  "text.autoconfig.duelutils.option.chatUtilsConfig.slashMeContinuesEnabled": "Enable /me Continues",
-  "text.autoconfig.duelutils.option.chatUtilsConfig.slashMeContinuesEnabled.@Tooltip": "Enables splitting a /me into two if it is too long.",
-  "text.autoconfig.duelutils.option.chatUtilsConfig.startupCommandsNamesEnabled": "Enable /names off On Startup",
-  "text.autoconfig.duelutils.option.chatUtilsConfig.startupCommandsNamesEnabled.@Tooltip": "Turns player names off upon joining the server.",
+  "duelutils.midnightconfig.title": "DuelUtils Config",
+  "duelutils.midnightconfig.category.Bingo": "Bingo",
+  "duelutils.midnightconfig.category.TransformationHelper": "TransformationHelper",
+  "duelutils.midnightconfig.category.ChatUtils": "ChatUtils",
   "category.duelutils": "DuelUtils",
   "key.duelutils.flipskin": "Transform Skin",
   "key.duelutils.bingo_screen": "Open Bingo Screen",
