Fixing config options.

--- a/src/main/resources/assets/duelutils/lang/en_us.json
+++ b/src/main/resources/assets/duelutils/lang/en_us.json
@@ -3,6 +3,9 @@
   "duelutils.midnightconfig.category.Bingo": "Bingo",
   "duelutils.midnightconfig.category.TransformationHelper": "TransformationHelper",
   "duelutils.midnightconfig.category.ChatUtils": "ChatUtils",
+  "duelutils.midnightconfig.enum.NamesCmdOptions.NAMES_OFF": "OFF",
+  "duelutils.midnightconfig.enum.NamesCmdOptions.NAMES_ON": "ON",
+  "duelutils.midnightconfig.enum.NamesCmdOptions.NAMES_CHAR": "CHARACTER",
   "category.duelutils": "DuelUtils",
   "key.duelutils.flipskin": "Transform Skin",
   "key.duelutils.bingo_screen": "Open Bingo Screen",
