Converting to using YACL instead of MidnightLib due to issues with saving config.

--- a/src/main/resources/assets/duelutils/lang/en_us.json
+++ b/src/main/resources/assets/duelutils/lang/en_us.json
@@ -1,11 +1,7 @@
 {
-  "duelutils.midnightconfig.title": "DuelUtils Config",
-  "duelutils.midnightconfig.category.Bingo": "Bingo",
-  "duelutils.midnightconfig.category.TransformationHelper": "TransformationHelper",
-  "duelutils.midnightconfig.category.ChatUtils": "ChatUtils",
-  "duelutils.midnightconfig.enum.NamesCmdOptions.NAMES_OFF": "OFF",
-  "duelutils.midnightconfig.enum.NamesCmdOptions.NAMES_ON": "ON",
-  "duelutils.midnightconfig.enum.NamesCmdOptions.NAMES_CHAR": "CHARACTER",
+  "duelutils.config.startupcommands.namesoptions.names_off": "/names off",
+  "duelutils.config.startupcommands.namesoptions.names_on": "/names on",
+  "duelutils.config.startupcommands.namesoptions.names_char": "/names character",
   "category.duelutils": "DuelUtils",
   "key.duelutils.flipskin": "Transform Skin",
   "key.duelutils.bingo_screen": "Open Bingo Screen",
