--- a/src/main/resources/assets/duelutils/lang/en_us.json
+++ b/src/main/resources/assets/duelutils/lang/en_us.json
@@ -5,5 +5,9 @@
   "category.duelutils": "DuelUtils",
   "key.duelutils.flipskin": "Transform Skin",
   "key.duelutils.bingo_screen": "Open Bingo Screen",
-  "key.duelutils.modmenu": "Open DuelUtils Config"
+  "key.duelutils.modmenu": "Open DuelUtils Config",
+  "key.duelutils.openbagone": "Open Bag 1",
+  "key.duelutils.openbagtwo": "Open Bag 2",
+  "key.duelutils.openbagthree": "Open Bag 3",
+  "key.duelutils.openbagfour": "Open Bag 4"
 }
