--- a/src/main/resources/assets/jimmytools/lang/en_us.json
+++ b/src/main/resources/assets/jimmytools/lang/en_us.json
@@ -2,12 +2,18 @@
   "jimmytools.config.startupcommands.namesoptions.names_off": "/names off",
   "jimmytools.config.startupcommands.namesoptions.names_on": "/names on",
   "jimmytools.config.startupcommands.namesoptions.names_char": "/names character",
-  "category.jimmytools": "JimmyTools",
-  "key.jimmytools.transform": "Transform Skin",
-  "key.jimmytools.bingo_screen": "Open Bingo Screen",
-  "key.jimmytools.modmenu": "Open JimmyTools Config",
-  "key.jimmytools.openbagone": "Open Bag 1",
-  "key.jimmytools.openbagtwo": "Open Bag 2",
-  "key.jimmytools.openbagthree": "Open Bag 3",
-  "key.jimmytools.openbagfour": "Open Bag 4"
+  "keybinds.category.jimmytools": "JimmyTools",
+  "keybinds.key.jimmytools.transform": "Transform Skin",
+  "keybinds.key.jimmytools.bingo_screen": "Open Bingo Screen",
+  "keybinds.key.jimmytools.modmenu": "Open JimmyTools Config",
+  "keybinds.key.jimmytools.openbagone": "Open Bag (Red)",
+  "keybinds.key.jimmytools.openbagtwo": "Open Bag (Blue) ",
+  "keybinds.key.jimmytools.openbagthree": "Open Bag (Green)",
+  "keybinds.key.jimmytools.openbagfour": "Open Bag (Purple)",
+  "screen.jimmytools.bingo.title": "Bingo Screen",
+  "screen.jimmytools.bingoitems.title": "Bingo Items",
+  "buttons.jimmytools.bingo.clear_marks": "Clear Marks",
+  "buttons.jimmytools.bingo.generate_cards": "Generate Cards",
+  "buttons.jimmytools.bingo.reset": "Reset",
+  "buttons.jimmytools.bingo.item_list": "Item List"
 }
